prevent overflow in section div

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -126,6 +126,7 @@ header ul {
 section {
   width:580px;
   float:right;
+  word-wrap: break-word;
 }
 
 small {
